# serializer version: 1
# name: test_sensors[sensor.test_league_draft_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_draft_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Draft start',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Draft start',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'draft_start',
    'unique_id': '123456789_1397743357073084416_draft_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_draft_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      'draft_id': '1397743359191212032',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Draft start',
      'my_slot': 2,
      'pick_timer': 28800,
      'rounds': 15,
      'status': 'drafting',
      'teams': 4,
      'type': 'snake',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_draft_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-09-05T18:00:00+00:00',
  })
# ---
# name: test_sensors[sensor.test_league_last_big_play-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_last_big_play',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last big play',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Last big play',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_big_play',
    'unique_id': '123456789_1397743357073084416_last_big_play',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_last_big_play-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Last big play',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_last_big_play',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.test_league_last_pick-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_last_pick',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last pick',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Last pick',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_pick',
    'unique_id': '123456789_1397743357073084416_last_pick',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_last_pick-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: 'https://sleepercdn.com/content/nfl/players/thumb/4866.jpg',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Last pick',
      'is_keeper': False,
      'is_mine': False,
      'pick': '2.01',
      'pick_in_round': 1,
      'pick_no': 5,
      'picked_by': 'user_4',
      'player_id': '4866',
      'position': 'RB',
      'roster_id': 4,
      'round': 2,
      'team': 'PHI',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_last_pick',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Saquon Barkley',
  })
# ---
# name: test_sensors[sensor.test_league_league_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'pre_draft',
        'drafting',
        'in_season',
        'complete',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_league_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'League status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'League status',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'league_status',
    'unique_id': '123456789_1397743357073084416_league_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_league_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League League status',
      'num_teams': 4,
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'pre_draft',
        'drafting',
        'in_season',
        'complete',
      ]),
      'playoff_teams': 4,
      'playoff_week_start': 16,
      'scoring_type': 'ppr',
      'season': '2026',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_league_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'pre_draft',
  })
# ---
# name: test_sensors[sensor.test_league_matchup_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_matchup_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Matchup points',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Matchup points',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'matchup_points',
    'unique_id': '123456789_1397743357073084416_matchup_points',
    'unit_of_measurement': 'pts',
  })
# ---
# name: test_sensors[sensor.test_league_matchup_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Matchup points',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'pts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_matchup_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.test_league_my_next_pick-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_my_next_pick',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'My next pick',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'My next pick',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'my_next_pick',
    'unique_id': '123456789_1397743357073084416_my_next_pick',
    'unit_of_measurement': 'picks',
  })
# ---
# name: test_sensors[sensor.test_league_my_next_pick-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League My next pick',
      'pick': '2.03',
      'pick_in_round': 3,
      'pick_no': 7,
      'round': 2,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'picks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_my_next_pick',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.test_league_on_the_clock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_on_the_clock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'On the clock',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On the clock',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'on_the_clock',
    'unique_id': '123456789_1397743357073084416_on_the_clock',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_on_the_clock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'deadline': '2026-09-06T18:00:00+00:00',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League On the clock',
      'is_mine': False,
      'paused': False,
      'pick': '2.02',
      'pick_in_round': 2,
      'pick_no': 6,
      'picks_made': 5,
      'picks_total': 60,
      'roster_id': 3,
      'round': 2,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_on_the_clock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'user_3',
  })
# ---
# name: test_sensors[sensor.test_league_opponent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_opponent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Opponent',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Opponent',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'opponent',
    'unique_id': '123456789_1397743357073084416_opponent',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_opponent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Opponent',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_opponent',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.test_league_opponent_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_opponent_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Opponent points',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Opponent points',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'opponent_points',
    'unique_id': '123456789_1397743357073084416_opponent_points',
    'unit_of_measurement': 'pts',
  })
# ---
# name: test_sensors[sensor.test_league_opponent_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Opponent points',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'pts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_opponent_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.test_league_points_against-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_points_against',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Points against',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Points against',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'points_against',
    'unique_id': '123456789_1397743357073084416_points_against',
    'unit_of_measurement': 'pts',
  })
# ---
# name: test_sensors[sensor.test_league_points_against-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Points against',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'pts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_points_against',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.test_league_points_for-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_points_for',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Points for',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Points for',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'points_for',
    'unique_id': '123456789_1397743357073084416_points_for',
    'unit_of_measurement': 'pts',
  })
# ---
# name: test_sensors[sensor.test_league_points_for-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Points for',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'pts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_points_for',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.test_league_rank-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_rank',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rank',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Rank',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rank',
    'unique_id': '123456789_1397743357073084416_rank',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_rank-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Rank',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_rank',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.test_league_record-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_record',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Record',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Record',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'record',
    'unique_id': '123456789_1397743357073084416_record',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_record-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Record',
      'losses': 0,
      'ties': 0,
      'wins': 0,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_record',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0-0',
  })
# ---
# name: test_sensors[sensor.test_league_starters_out-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_starters_out',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Starters out',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Starters out',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'starters_out',
    'unique_id': '123456789_1397743357073084416_starters_out',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_starters_out-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Starters out',
      'starters': list([
        dict({
          'player': '0',
          'slot': 'QB',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'RB',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'RB',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'WR',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'WR',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'TE',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'FLEX',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'FLEX',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'K',
          'status': 'Empty',
        }),
        dict({
          'player': '0',
          'slot': 'DEF',
          'status': 'Empty',
        }),
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_starters_out',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_sensors[sensor.test_league_team-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_team',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Team',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Team',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'team',
    'unique_id': '123456789_1397743357073084416_team',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_team-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: 'https://sleepercdn.com/uploads/testteam.jpg',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Team',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_team',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Test Team',
  })
# ---
# name: test_sensors[sensor.test_league_waiver_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_league_waiver_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Waiver position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Waiver position',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'waiver_position',
    'unique_id': '123456789_1397743357073084416_waiver_position',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_league_waiver_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Waiver position',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_league_waiver_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_sensors[sensor.wombats_league_draft_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_draft_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Draft start',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Draft start',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'draft_start',
    'unique_id': '123456789_1392910061486997504_draft_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_draft_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      'draft_id': '1392910064494333952',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Draft start',
      'my_slot': 7,
      'pick_timer': 28800,
      'rounds': 14,
      'status': 'complete',
      'teams': 12,
      'type': 'snake',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_draft_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-08-24T13:20:26+00:00',
  })
# ---
# name: test_sensors[sensor.wombats_league_last_big_play-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_last_big_play',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last big play',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Last big play',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_big_play',
    'unique_id': '123456789_1392910061486997504_last_big_play',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_last_big_play-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Last big play',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_last_big_play',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.wombats_league_last_pick-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_last_pick',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last pick',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Last pick',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_pick',
    'unique_id': '123456789_1392910061486997504_last_pick',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_last_pick-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: 'https://sleepercdn.com/content/nfl/players/thumb/5189.jpg',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Last pick',
      'is_keeper': False,
      'is_mine': False,
      'pick': '14.12',
      'pick_in_round': 12,
      'pick_no': 168,
      'picked_by': 'Team 11',
      'player_id': '5189',
      'position': 'K',
      'roster_id': 12,
      'round': 14,
      'team': 'SF',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_last_pick',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Eddy Pineiro',
  })
# ---
# name: test_sensors[sensor.wombats_league_league_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'pre_draft',
        'drafting',
        'in_season',
        'complete',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_league_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'League status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'League status',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'league_status',
    'unique_id': '123456789_1392910061486997504_league_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_league_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League League status',
      'num_teams': 12,
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'pre_draft',
        'drafting',
        'in_season',
        'complete',
      ]),
      'playoff_teams': 6,
      'playoff_week_start': 15,
      'scoring_type': 'half_ppr',
      'season': '2026',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_league_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'in_season',
  })
# ---
# name: test_sensors[sensor.wombats_league_matchup_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_matchup_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Matchup points',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Matchup points',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'matchup_points',
    'unique_id': '123456789_1392910061486997504_matchup_points',
    'unit_of_measurement': 'pts',
  })
# ---
# name: test_sensors[sensor.wombats_league_matchup_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Matchup points',
      'matchup_id': 6,
      'starters': list([
        dict({
          'player': 'Caleb Williams',
          'player_id': '11560',
          'points': 17.66,
          'slot': 'QB',
        }),
        dict({
          'player': 'Jonathan Taylor',
          'player_id': '6813',
          'points': 9.5,
          'slot': 'RB',
        }),
        dict({
          'player': "De'Von Achane",
          'player_id': '9226',
          'points': 0.0,
          'slot': 'RB',
        }),
        dict({
          'player': 'Chris Olave',
          'player_id': '8144',
          'points': 4.3,
          'slot': 'WR',
        }),
        dict({
          'player': 'Zay Flowers',
          'player_id': '9997',
          'points': 23.5,
          'slot': 'WR',
        }),
        dict({
          'player': 'Travis Kelce',
          'player_id': '1466',
          'points': 0.0,
          'slot': 'TE',
        }),
        dict({
          'player': 'Bhayshul Tuten',
          'player_id': '12490',
          'points': 3.7,
          'slot': 'FLEX',
        }),
        dict({
          'player': 'Tyler Loop',
          'player_id': '12711',
          'points': 4.0,
          'slot': 'K',
        }),
        dict({
          'player': 'Pittsburgh Steelers',
          'player_id': 'PIT',
          'points': 9.0,
          'slot': 'DEF',
        }),
      ]),
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'pts',
      'week': 1,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_matchup_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '71.66',
  })
# ---
# name: test_sensors[sensor.wombats_league_my_next_pick-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_my_next_pick',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'My next pick',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'My next pick',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'my_next_pick',
    'unique_id': '123456789_1392910061486997504_my_next_pick',
    'unit_of_measurement': 'picks',
  })
# ---
# name: test_sensors[sensor.wombats_league_my_next_pick-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League My next pick',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'picks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_my_next_pick',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.wombats_league_on_the_clock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_on_the_clock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'On the clock',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On the clock',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'on_the_clock',
    'unique_id': '123456789_1392910061486997504_on_the_clock',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_on_the_clock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League On the clock',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_on_the_clock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.wombats_league_opponent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_opponent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Opponent',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Opponent',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'opponent',
    'unique_id': '123456789_1392910061486997504_opponent',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_opponent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: 'https://sleepercdn.com/avatars/thumbs/opponentavatar',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Opponent',
      'opponent_record': '0-0',
      'opponent_roster_id': 5,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_opponent',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'user_12',
  })
# ---
# name: test_sensors[sensor.wombats_league_opponent_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_opponent_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Opponent points',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Opponent points',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'opponent_points',
    'unique_id': '123456789_1392910061486997504_opponent_points',
    'unit_of_measurement': 'pts',
  })
# ---
# name: test_sensors[sensor.wombats_league_opponent_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: 'https://sleepercdn.com/avatars/thumbs/opponentavatar',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Opponent points',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'pts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_opponent_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '35.9',
  })
# ---
# name: test_sensors[sensor.wombats_league_points_against-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_points_against',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Points against',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Points against',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'points_against',
    'unique_id': '123456789_1392910061486997504_points_against',
    'unit_of_measurement': 'pts',
  })
# ---
# name: test_sensors[sensor.wombats_league_points_against-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Points against',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'pts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_points_against',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.wombats_league_points_for-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_points_for',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Points for',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Points for',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'points_for',
    'unique_id': '123456789_1392910061486997504_points_for',
    'unit_of_measurement': 'pts',
  })
# ---
# name: test_sensors[sensor.wombats_league_points_for-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Points for',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'pts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_points_for',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.wombats_league_rank-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_rank',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rank',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Rank',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rank',
    'unique_id': '123456789_1392910061486997504_rank',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_rank-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Rank',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_rank',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.wombats_league_record-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_record',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Record',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Record',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'record',
    'unique_id': '123456789_1392910061486997504_record',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_record-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Record',
      'losses': 0,
      'ties': 0,
      'wins': 0,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_record',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0-0',
  })
# ---
# name: test_sensors[sensor.wombats_league_starters_out-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_starters_out',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Starters out',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Starters out',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'starters_out',
    'unique_id': '123456789_1392910061486997504_starters_out',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_starters_out-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Starters out',
      'starters': list([
        dict({
          'player': 'Zay Flowers',
          'slot': 'WR',
          'status': 'Out',
        }),
        dict({
          'player': 'Travis Kelce',
          'slot': 'TE',
          'status': 'Out',
        }),
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_starters_out',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors[sensor.wombats_league_team-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_team',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Team',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Team',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'team',
    'unique_id': '123456789_1392910061486997504_team',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_team-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: 'https://sleepercdn.com/uploads/testteam.jpg',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Team',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_team',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Test Team',
  })
# ---
# name: test_sensors[sensor.wombats_league_waiver_budget_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_waiver_budget_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Waiver budget remaining',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Waiver budget remaining',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'waiver_budget_remaining',
    'unique_id': '123456789_1392910061486997504_waiver_budget_remaining',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_waiver_budget_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'budget': 100,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Waiver budget remaining',
      'used': 0,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_waiver_budget_remaining',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[sensor.wombats_league_waiver_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wombats_league_waiver_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Waiver position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Waiver position',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'waiver_position',
    'unique_id': '123456789_1392910061486997504_waiver_position',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.wombats_league_waiver_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Waiver position',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wombats_league_waiver_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
